trying to fix squished splash pic

--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body {
 #mePic {
   margin-left: auto;
   margin-right: auto;
-  max-width: 40%;
+  max-width: 50%;
+  max-height: 50%;
+  /* max-width: 40%; */
   background:#A0FFFF;
   border-radius: 100%;
   border-style: solid;
